Added menu bar to all screens

--- a/app/src/main/res/layout/activity_signals_screen.xml
+++ b/app/src/main/res/layout/activity_signals_screen.xml
@@ -10,4 +10,12 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="allentsang.networkdiagnosticsapp.SignalsScreen">
 
+    <android.support.v7.widget.Toolbar
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="?attr/colorPrimary"
+        android:theme="?attr/actionBarTheme"
+        android:minHeight="?attr/actionBarSize"
+        android:id="@+id/start_toolbar" />
+
 </RelativeLayout>
