--- a/app/src/main/res/layout/activity_start_screen.xml
+++ b/app/src/main/res/layout/activity_start_screen.xml
@@ -17,14 +17,14 @@
         android:background="?attr/colorPrimary"
         android:theme="?attr/actionBarTheme"
         android:minHeight="?attr/actionBarSize"
-        android:id="@+id/start_toolbar" />
+        android:id="@+id/toolbar" />
 
     <TextView
         android:text="@string/ssid_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/start_ssid_label"
-        android:layout_below="@+id/start_toolbar"
+        android:id="@+id/ssid_label"
+        android:layout_below="@+id/toolbar"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginLeft="10dp"
@@ -34,10 +34,10 @@
         android:text="@string/ip_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/start_ssid_label"
+        android:layout_below="@+id/ssid_label"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:id="@+id/start_ip_label"
+        android:id="@+id/ip_label"
         android:layout_marginLeft="10dp"
         android:layout_marginStart="10dp" />
 
@@ -45,10 +45,10 @@
         android:text="@string/not_found"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/start_ssid_content"
-        android:layout_below="@+id/start_toolbar"
-        android:layout_toRightOf="@+id/start_ip_label"
-        android:layout_toEndOf="@+id/start_ip_label"
+        android:id="@+id/ssid_content"
+        android:layout_below="@+id/toolbar"
+        android:layout_toRightOf="@+id/ip_label"
+        android:layout_toEndOf="@+id/ip_label"
         android:layout_marginLeft="10dp"
         android:layout_marginStart="10dp" />
 
@@ -56,10 +56,10 @@
         android:text="@string/not_found"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/start_ip_content"
-        android:layout_below="@+id/start_ssid_content"
-        android:layout_alignLeft="@+id/start_ssid_content"
-        android:layout_alignStart="@+id/start_ssid_content" />
+        android:id="@+id/ip_content"
+        android:layout_below="@+id/ssid_content"
+        android:layout_alignLeft="@+id/ssid_content"
+        android:layout_alignStart="@+id/ssid_content" />
 
 
 </RelativeLayout>
