--- a/app/src/main/res/layout/activity_device_screen.xml
+++ b/app/src/main/res/layout/activity_device_screen.xml
@@ -16,6 +16,6 @@
         android:background="?attr/colorPrimary"
         android:theme="?attr/actionBarTheme"
         android:minHeight="?attr/actionBarSize"
-        android:id="@+id/start_toolbar" />
+        android:id="@+id/toolbar" />
 
 </RelativeLayout>
